Fixed review section spacing

--- a/src/components/BookDetails/BookDetails.css
+++ b/src/components/BookDetails/BookDetails.css
@@ -81,6 +81,10 @@
   display: none;
 }
 
+.book-details-right .review-section > div > .separator-line {
+  margin: 1.1em 0;
+}
+
 .book-details-right > .review-section .title .MuiTypography-root {
   font-weight: 400;
   font-size: 14px;
@@ -194,6 +198,10 @@
 
   .book-details-right .review-collection .separator-line {
     display: block;
+  }
+
+  .book-details-right .review-section > div > .separator-line {
+    margin: 0.7em 0 0.5em 0;
   }
 
   .book-details-right > .review-section {
